@@ -3,7 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: Thomas Gaugler <thomas@dadie.net>
 Uploaders: Didier Raboud <odyx@debian.org>
-Build-Depends: debhelper (>= 7.0.50~), scons (>= 1.2.0), xmlto, html2text, libcppunit-dev, zlib1g-dev, mingw-w64 (>= 0.20)
+Build-Depends: debhelper (>= 7.0.50~), scons (>= 1.2.0), xmlto, html2text, libcppunit-dev, zlib1g-dev, mingw-w64 (>= 0.20), @@NSIS_COMMON_BUILD_DEPS@@
 Standards-Version: 3.9.2
 Homepage: http://nsis.sourceforge.net/
 Vcs-Svn: svn://svn.debian.org/collab-maint/ext-maint/nsis/trunk
