@@ -1,5 +1,6 @@
 nsis (2.46-4) UNRELEASED; urgency=low
 
+  [ Thomas Gaugler ]
   * Run architecture independent build process only when demanded.
   * Split NSIS package into four packages:
     - compiler and utilities (architecture dependent)
@@ -10,6 +11,10 @@ nsis (2.46-4) UNRELEASED; urgency=low
   * Perform test scripts also for binary-only build
   * Support building with mingw-w64 (Closes: #620099)
   * Support parallel build 
+
+  [ Didier Raboud ]
+  * Generate the full control file during maintainer (including arch:all
+    packages) builds.
 
  -- Thomas Gaugler <thomas@dadie.net>  Sat, 30 Apr 2011 21:29:33 +0000
 
